# ai-slack-bot

./: .env.example  .gitignore  README.ja.md  README.md  pyproject.toml
app/: http_server.py  main.py  resource_loader.py  settings.py  slack_bot.py
data/: llm_instruction.txt
util/: llm_utils.py
util/setting/: slack_settings.py
