[project]
name = "app"
version = "0.1.0"
description = "AI Slack Bot"
authors = [
    {name = "oha"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-core (>=0.3.59,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "slack-bolt (>=1.23.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
